增加了以FragmentTabHost方式切换Fragment的示例

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,7 +23,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".BackStackActivity"/>
-        <activity android:name=".TabActivity"/>
+        <activity android:name=".TabByRadioGroupActivity"/>
+        <activity android:name=".TabByFragmentTabHostActivity"/>
     </application>
 
 </manifest>
